--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,15 +1,34 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-{% include head.html %}
-</head>
-<body data-gnl="göbekte" class="bg" style="min-height:100vh;">
+---
+layout: default
+---
 
-  <div data-gnl="23 24p kaplama">
+<div class="home">
+  {%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
+  {%- endif -%}
+
   {{ content }}
-  </div>
-  <footer data-gnl="24 24p altta-ol">
-  {% include foot.html %}
-  </footer>
-</body>
-</html>
+
+  {%- if site.posts.size > 0 -%}
+    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <ul class="post-list">
+      {%- for post in site.posts -%}
+      <li>
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        <h3>
+          <a class="post-link" href="{{ post.url | relative_url }}">
+            {{ post.title | escape }}
+          </a>
+        </h3>
+        {%- if site.show_excerpts -%}
+          {{ post.excerpt }}
+        {%- endif -%}
+      </li>
+      {%- endfor -%}
+    </ul>
+
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  {%- endif -%}
+
+</div>
