--- a/assets/deveb-s1n0/_dil-en.scss
+++ b/assets/deveb-s1n0/_dil-en.scss
@@ -14,8 +14,8 @@ $dev: hg;
 /* Kap Örgüsü */
 $soldan: left;
 $sağdan: right;
-$tamekran: fullscreen;
-$sığ: fit;
+$görüntülük-kaplamı: full-screen;
+$kaplam: full;
 
 /* Sıralama Düzeni */
 $nc: th;
