--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -14,8 +14,8 @@ $dev: dev;
 // Kap Örgüsü
 $soldan: soldan;
 $sağdan: sağdan;
-$tamekran: tamekran;
-$sığ: sığ;
+$görüntülük-kaplamı: görüntülük-kaplamı;
+$kaplam: kaplam;
 
 // Sıralama Düzeni
 $nc: nc;
