--- a/assets/deveb-s1n0/deveb-en.scss
+++ b/assets/deveb-s1n0/deveb-en.scss
@@ -2,5 +2,5 @@
 @import "dil-en";
 @import "sifirlama";
 @import "capraz-tarayici";
-@import "kap-orgusu";
+@import "kesitlik-orgusu";
 @import "dal-orgusu";
