--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,31 +1,26 @@
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>{% if page.title %} {{ page.title }}{% endif %}</title>
 
-<!-- Kök -->
-<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-<script
-			  src="https://code.jquery.com/jquery-2.2.4.min.js"
-			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-			  crossorigin="anonymous"></script>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!---->
+  {%- seo -%}
+<!---->
+  {% if page.lang == 'en' %}
+    <link rel="stylesheet" href="{{ "/assets/deveb-s1n0/deveb-en.css" | relative_url }}">
+  {% endif %}
+  <link rel="stylesheet" href="{{ "/assets/deveb-s1n0/deveb.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/imge.css" | relative_url }}">
 
-<script src="/assets/js/deveb.js"></script>
+  <!-- Eklenti: Font Awesome -->
+  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+  <!-- Eklenti: highlight -->
+  <link rel="stylesheet" href="/assets/plugins/highlight.css">
 
-<link href="/assets/scss/dvb.css" rel="stylesheet">
-<link href="/assets/css/deveb.genel.css" rel="stylesheet">
-
-<!--prism.js-->
-<link rel="stylesheet"
-      href="/assets/plugins/prism/prism.css">
-
-<script src="/assets/plugins/prism/prism.js"></script>
-
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+  <!---->
+  {%- feed_meta -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+    {%- include google-analytics.html -%}
+  {%- endif -%}
+<!---->
+</head>
