--- a/_layouts/s1n0/home.html
+++ b/_layouts/s1n0/home.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="tr">
 
-{% include head.html %}
-
-<body data-gnl="göbekte" class="bg" style="min-height:100vh;">
-
-  <div data-gnl="23 /24 kaplama">
-  
 <div data-gnl="o" class="beri-üst-2">
   <div data-gnl=" uzun-ol o" data-ort="6">
     <div data-gnl="o" data-etki="havada">
@@ -15,7 +7,7 @@
         İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarınızı tasarlarken deveb'in oluşturduğu özelliklerden faydalanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın.
         Ekran örgüsü, kap örgüsü, renk örgüsü ve dahası İngilizce ve Türkçe olmak üzere iki dil desteği ile keşfedilmeyi bekliyor.
       </p>
-      <p class="metin-gri-3 beri-2" data-gnl="o">
+      <p class="metin-gri-3 beri-2" data-gnl="1 1p o">
         <a data-bağ="genel" href="/belgeler/deveb.html">DEVEB 0.1</a>&nbsp;
         <a data-bağ="genel" href="/1.0/tr/">DEVEB öncü.1.0</a>&nbsp;
         <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
@@ -37,10 +29,3 @@
     </div>
   </div>
 </div>
-
-  </div>
-  <footer data-gnl="24 24p altta-ol">
-  {% include foot.html %}
-  </footer>
-</body>
-</html>
