--- a/_layouts/tek.html
+++ b/_layouts/tek.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-{% include head.html %}
+{% include b-head.html %}
 </head>
 <body data-gnl="sütun">
   <header data-gnl="24 24p" class="header">
-  {% include header.html %}
+  {% include b-header.html %}
   </header>
   <div data-gnl="23 24p göbekte-ol" data-dev="kaplama">
   {{ content }}
