--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 
 {% include head.html %}
 
-<body data-gnl="göbekte" class="bg" style="min-height:100vh;">
+<body data-gnl="o" class="bg" style="min-height:100vh;">
 
   <div data-gnl="23 /24 kaplama">
   
