--- a/_layouts/s1n0/goruntuluk-orgusu.html
+++ b/_layouts/s1n0/goruntuluk-orgusu.html
@@ -8,10 +8,10 @@ layout: default
 {% case dil %}
 {% when 'tr' %}
 <p class="girlik">
-  Saat kadar minik görüntülükleri (ekranları), telefon görüntülükleri, tablet görüntülükleri, dizüstü görüntülükleri, masaüstü görüntülükleri, tv görüntülükleri ve dev görüntülükleri olarak gruplandırılmış 8 farklı adet görüntülük ölçeği uyarlamalı olarak kullanılır. 
+  Saat kadar minik görüntülükleri (ekranları), telefon görüntülükleri, elüstü görüntülükleri, dizüstü görüntülükleri, masaüstü görüntülükleri, kocaman görüntülükleri ve ulu görüntülükleri olarak öbeklendirilmiş 8 ayrı görüntülük ölçeği uyarlamalı olarak kullanılır. 
 </p>
 <p>
-  Günümüzde, görüntülük ölçekleri ve görüntülük çözünürlükleri çok çeşitlidir. Bu nedenle uyarlamalı tasarım yapmak bir gerekliliktir. Minik ekranlar ise yakın gelecekte yaygınlaşacaktır. Bu koşullar doğrultusunda <span class="simget">deveb</span> daha çok görüntülük aralığı içerir.
+  Günümüzde, görüntülük ölçekleri ve görüntülük çözünürlükleri çok çeşitlidir. Bu nedenle uyarlamalı tasarım yapmak bir gerekliliktir. Minik ekranlar ise yakın gelecekte yaygınlaşacaktır. Bu koşullar altında ve doğrultusunda <span class="simget">deveb</span> daha çok görüntülük aralığı içerir.
 </p>
 <p></p>
 <table class="tablo">
@@ -27,7 +27,7 @@ layout: default
         <i class="fa fa-desktop" aria-hidden="true"></i>
         <i class="fa fa-television" aria-hidden="true"></i>
         <i class="fa fa-window-maximize" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">saat » dev</span>
+        <br><span data-metin="olumlu ince">saat » ulu</span>
       </th>
       <th>
         Minik <br>
@@ -42,7 +42,7 @@ layout: default
       <th>
         Küçük <br>
         <i class="fa fa-tablet" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">tablet</span>
+        <br><span data-metin="olumlu ince">elüstü</span>
       </th>
       <th>
         Orta <br>
@@ -60,9 +60,9 @@ layout: default
         <br><span data-metin="olumlu ince">Televizyon</span>
       </th>
       <th>
-        Dev <br>
+        Ulu <br>
         <i class="fa fa-window-maximize" aria-hidden="true"></i>
-        <br><span data-metin="olumlu ince">Dev görüntülük</span>
+        <br><span data-metin="olumlu ince">ulu görüntülük</span>
       </th>
     </tr>
   </thead>
@@ -76,7 +76,7 @@ layout: default
       <td>data-ort</td>
       <td>data-byk</td>
       <td>data-kcm</td>
-      <td>data-dev</td>
+      <td>data-ulu</td>
     </tr>
     <tr>
       <th>Ölçekler</th>
@@ -115,7 +115,7 @@ layout: default
 <h4>Kullanımı</h4>
 <p>
   Görüntülük örgüsü, <span class="simget">deveb</span>'in özellikleriyle iliştirilmiş
-  şekilde kullanılır. Kap örgüsünde varsayılan kural gerçeli olduğu gibi başka
+  şekilde kullanılır. Kesitlik örgüsünde varsayılan kural gerçeli olduğu gibi başka
   özelliklerde daha ayrı kullanıldığını görmeniz doğaldır.
 </p>
 <h5>küçükleriyle-?</h5>
