--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -2,7 +2,7 @@
 {% assign dil = page.lang %}
 {% assign surum = '1.0' %}
 {% assign yol = '/' | append: surum | append: '/' | append: dil | append: '/' %}
-{% assign anayol = '/' | append: surum | append: '/' | append: dil %}
+{% assign anayol = '/' | append: surum | append: '/' | append: dil | append: '/' %}
 
 {% if page.url == anayol %}
   {% assign baslangic-ise-etkin = "etkin" %}
